src/c/gft.h

/** Raw 17-bit GF-T16 pattern carried in the low bits of a uint32_t. */
typedef uint32_t gft16_t;
/** Encode an IEEE float32 into GF-T16 (round-to-nearest, saturate to Inf). */
gft16_t gft16_from_f32(float x);
/** Decode a GF-T16 value back to float32. */
float gft16_to_f32(gft16_t g);
gft16_t gft16_add(gft16_t a, gft16_t b);
gft16_t gft16_sub(gft16_t a, gft16_t b);
gft16_t gft16_mul(gft16_t a, gft16_t b);
gft16_t gft16_div(gft16_t a, gft16_t b);
gft16_t gft16_neg(gft16_t g);
gft16_t gft16_abs(gft16_t g);
/** 1 if g is finite (not the reserved Inf/NaN row), else 0. */
uint8_t gft16_is_finite(gft16_t g);
/** GF-T8  : E=3 trits, M=4 bits (10-bit value in a uint16). EXP_OFFSET=13, max=26. */
typedef uint16_t gft8_t;
/** GF-T32 : E=6 trits, M=25 bits (36-bit value in a uint64). EXP_OFFSET=364, max=728, ~219 decades. */
typedef uint64_t gft32_t;
gft8_t  gft8_from_f32(float x);
float   gft8_to_f32(gft8_t g);
gft8_t  gft8_add(gft8_t a, gft8_t b);
gft8_t  gft8_mul(gft8_t a, gft8_t b);
uint8_t gft8_is_finite(gft8_t g);
gft32_t gft32_from_f32(float x);
float   gft32_to_f32(gft32_t g);
gft32_t gft32_add(gft32_t a, gft32_t b);
gft32_t gft32_mul(gft32_t a, gft32_t b);
uint8_t gft32_is_finite(gft32_t g);